Print Preview: Add tooltips for printer icons.

It is not always obvious what icons represent. Add tooltips so users can
hover over them and see what they mean.

BUG=638328

Change-Id: I668c2eaae9f6b33eb1c54ceeee681ccdd04eeb22